--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -9,7 +9,7 @@
     font-size: large;
 }
 
-.form-container h4 {
+.form-container label {
     margin-bottom: 5px;
     color: #333;
     display: inline-block;
@@ -32,7 +32,6 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: larger;
 }
 
 .form-container button:hover {
@@ -50,7 +49,7 @@
         padding: 15px;
     }
 
-    .form-container h4 {
+    .form-container label {
         width: 100%;
         margin-bottom: 8px;
     }
